force-app/main/default/objects/LoanAppl__c/fields/App_Form_End_Use_Letter_Doc_Required__c.field-meta.xml
<CustomField>
    <fullName>App_Form_End_Use_Letter_Doc_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>App Form/End Use Letter Doc Required</label>
    <type>Checkbox</type>
</CustomField>