force-app/main/default/objects/LoanAppl__c/fields/BrchCode__c.field-meta.xml
<CustomField>
    <fullName>BrchCode__c</fullName>
    <label>Branch Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>