force-app/main/default/objects/LoanAppl__c/fields/Disbursal_Document_Required__c.field-meta.xml
<CustomField>
    <fullName>Disbursal_Document_Required__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Disbursal Document Required</label>
    <type>Checkbox</type>
</CustomField>