force-app/main/default/objects/LoanAppl__c/fields/District_Salesforce_Code__c.field-meta.xml
<CustomField>
    <fullName>District_Salesforce_Code__c</fullName>
    <label>District Salesforce Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>