force-app/main/default/objects/LoanAppl__c/fields/DSACONTACT__c.field-meta.xml
<CustomField>
    <fullName>DSACONTACT__c</fullName>
    <formula>Lead__r.DSAContact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DSACONTACT</label>
    <type>Text</type>
</CustomField>