force-app/main/default/objects/LoanAppl__c/fields/E_Sign_Physical_Sign__c.field-meta.xml
<CustomField>
    <fullName>E_Sign_Physical_Sign__c</fullName>
    <label>E-Sign/Physical Sign</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-Sign</fullName>
            </value>
            <value>
                <fullName>Physical Sign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>