force-app/main/default/objects/LoanAppl__c/fields/E_Stamp_Physical_Stamp__c.field-meta.xml
<CustomField>
    <fullName>E_Stamp_Physical_Stamp__c</fullName>
    <label>E-Stamp/Physical Stamp</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-stamp</fullName>
            </value>
            <value>
                <fullName>Physical Stamp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>