force-app/main/default/objects/LoanAppl__c/fields/EStamp_District__c.field-meta.xml
<CustomField>
    <fullName>EStamp_District__c</fullName>
    <label>EStamp District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>