force-app/main/default/objects/LoanAppl__c/fields/EStamp_Sub_Registrar_Office__c.field-meta.xml
<CustomField>
    <fullName>EStamp_Sub_Registrar_Office__c</fullName>
    <label>EStamp Sub Registrar Office</label>
    <length>255</length>
    <type>Text</type>
</CustomField>