force-app/main/default/objects/LoanAppl__c/fields/Is_E_Stamp_Done__c.field-meta.xml
<CustomField>
    <fullName>Is_E_Stamp_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is E-Stamp/Physical Done</label>
    <type>Checkbox</type>
</CustomField>