force-app/main/default/objects/LoanAppl__c/fields/Sub_Registrar_Office_Salesforce_Code__c.field-meta.xml
<CustomField>
    <fullName>Sub_Registrar_Office_Salesforce_Code__c</fullName>
    <label>Sub Registrar Office Salesforce Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>